--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,9 +2,10 @@
     "env": {
         "browser": true,
         "es6": true,
-        "node": true
+        "node": true,
+        "jasmine": true
     },
-    "extends": "airbnb-base",
+    "extends": ["airbnb-base", "plugin:jasmine/recommended"],
     "parserOptions": {
         "sourceType": "module"
     },
