--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,12 @@
 {
     "env": {
+        "amd": true,
         "browser": true,
         "es6": true,
         "node": true,
         "jasmine": true
     },
+    "plugins": ["jasmine"],
     "extends": ["airbnb-base", "plugin:jasmine/recommended"],
     "parserOptions": {
         "sourceType": "module"
