--- a/package.json
+++ b/package.json
@@ -5,29 +5,39 @@
     "main": "app.js",
     "scripts": {
         "start": "npm run build && node dist/main.bundle.js",
-        "watch": "babel --no-babelrc --watch --presents es2015 app/src/app.js -o dist/main.bundle.js --source-maps",
-        "build": "babel --no-babelrc --presents es2015 app/src/app.js -o dist/main.bundle.js --source-maps",
-        "test": "jasmine"
+        "watch": "watchify app/src/index.js --debug -t babelify -o js/bundle.js",
+        "build": "browserify app/src/index.js --debug -o dist/main.bundle.js",
+        "test": "jasmine",
+        "clean": "rm -r dist/*"
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/cwgruss/sorting-js.git"
     },
-    "keywords": [
-        "sorting",
-        "sorting",
-        "algorithms"
-    ],
+    "keywords": ["sorting", "sorting", "algorithms"],
     "author": "Carter Gruss",
     "license": "ISC",
     "bugs": {
         "url": "https://github.com/cwgruss/sorting-js/issues"
     },
     "homepage": "https://github.com/cwgruss/sorting-js#readme",
+    "browserify": {
+        "transform": [
+            [
+                "babelify",
+                {
+                    "comments": false,
+                    "presets": ["es2015"]
+                }
+            ]
+        ]
+    },
     "devDependencies": {
         "babel-cli": "^6.26.0",
         "babel-preset-env": "^1.6.0",
         "babel-preset-es2015": "^6.24.1",
+        "babelify": "^7.3.0",
+        "browserify": "^14.4.0",
         "eslint": "^4.6.1",
         "eslint-config-airbnb-base": "^12.0.0",
         "eslint-plugin-import": "^2.7.0",
@@ -37,6 +47,15 @@
         "karma-chrome-launcher": "^2.2.0",
         "karma-jasmine": "^1.1.0",
         "karma-phantomjs-launcher": "^1.0.4",
-        "phantomjs": "^2.1.7"
+        "phantomjs": "^2.1.7",
+        "requirejs": "^2.3.5",
+        "serve": "^6.1.0",
+        "watchify": "^3.9.0"
+    },
+    "dependencies": {
+        "babel-core": "^6.26.0",
+        "babel-polyfill": "^6.26.0",
+        "lodash": "^4.17.4",
+        "uniq": "^1.0.1"
     }
 }
