--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
     "main": "app.js",
     "scripts": {
         "start": "npm run build && node dist/main.bundle.js",
-        "watch":
-            "watchify -r ./app/src/index.js:Sort --debug -o 'exorcist dist/bundle.js.map > dist/main.bundle.js' -v",
-        "build":
-            "browserify -r ./app/src/index.js:Sort --debug | exorcist dist/bundle.js.map > dist/main.bundle.js",
-        "test": "jasmine",
+        "watch": "watchify -r ./app/src/index.js:Sort --debug -o 'exorcist dist/bundle.js.map > dist/main.bundle.js' -v",
+        "build": "webpack --debug",
+        "test": "karma start karma.conf.js ",
         "clean": "rm -r dist/*"
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/cwgruss/sorting-js.git"
     },
-    "keywords": ["sorting", "sorting", "algorithms"],
+    "keywords": [
+        "sorting",
+        "sorting",
+        "algorithms"
+    ],
     "author": "Carter Gruss",
     "license": "ISC",
     "bugs": {
@@ -29,17 +31,19 @@
                 "babelify",
                 {
                     "comments": false,
-                    "presets": ["es2015"]
+                    "presets": [
+                        "es2015"
+                    ]
                 }
             ]
         ]
     },
     "devDependencies": {
         "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.6.0",
         "babel-preset-es2015": "^6.24.1",
-        "babelify": "^7.3.0",
-        "browserify": "^14.4.0",
         "eslint": "^4.6.1",
         "eslint-config-airbnb-base": "^12.0.0",
         "eslint-plugin-import": "^2.7.0",
@@ -49,15 +53,13 @@
         "karma-chrome-launcher": "^2.2.0",
         "karma-jasmine": "^1.1.0",
         "karma-phantomjs-launcher": "^1.0.4",
+        "karma-webpack": "^2.0.4",
         "phantomjs": "^2.1.7",
         "requirejs": "^2.3.5",
-        "serve": "^6.1.0",
-        "watchify": "^3.9.0"
+        "webpack": "^3.6.0"
     },
     "dependencies": {
-        "babel-core": "^6.26.0",
         "babel-polyfill": "^6.26.0",
-        "exorcist": "^0.4.0",
         "lodash": "^4.17.4",
         "uniq": "^1.0.1"
     }
