--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A JavaScript project for learning sorting and sorting algorithms.",
     "main": "app.js",
     "scripts": {
-        "start": "npm run build && node dist/main.bundle.js",
+        "start": "npm run build && node dist/bundle.js",
         "watch": "",
         "build": "webpack --debug",
         "test": "karma start karma.conf.js --single-run",
@@ -14,11 +14,7 @@
         "type": "git",
         "url": "git+https://github.com/cwgruss/sorting-js.git"
     },
-    "keywords": [
-        "sorting",
-        "sorting",
-        "algorithms"
-    ],
+    "keywords": ["sorting", "sorting", "algorithms"],
     "author": "Carter Gruss",
     "license": "ISC",
     "bugs": {
@@ -30,7 +26,6 @@
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.6.0",
-        "babel-preset-es2015": "^6.24.1",
         "eslint": "^4.6.1",
         "eslint-config-airbnb-base": "^12.0.0",
         "eslint-plugin-import": "^2.7.0",
@@ -45,6 +40,7 @@
         "karma-sourcemap-loader": "^0.3.7",
         "karma-webpack": "^2.0.4",
         "phantomjs": "^2.1.7",
+        "phantomjs-prebuilt": "^2.1.15",
         "requirejs": "^2.3.5",
         "webpack": "^3.6.0"
     },
