--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,13 +8,22 @@
     },
     "plugins": ["jasmine"],
     "extends": ["airbnb-base", "plugin:jasmine/recommended"],
+    "parser": "babel-eslint",
     "parserOptions": {
         "sourceType": "module"
     },
     "rules": {
+        "func-names": [
+            "error",
+            "never"
+        ],
         "indent": ["error", 4],
         "linebreak-style": ["error", "unix"],
         "quotes": ["error", "single"],
-        "semi": ["error", "always"]
+        "semi": ["error", "always"],
+        "arrow-body-style": [
+            "error",
+            "never"
+        ]
     }
 }
