--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
         "type": "git",
         "url": "git+https://github.com/cwgruss/sorting-js.git"
     },
-    "keywords": ["sorting", "sorting", "algorithms"],
+    "keywords": [
+        "sorting",
+        "sorting",
+        "algorithms"
+    ],
     "author": "Carter Gruss",
     "license": "ISC",
     "bugs": {
@@ -24,10 +28,11 @@
     "devDependencies": {
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.0",
+        "babel-eslint": "^8.0.1",
         "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.6.0",
-        "eslint": "^4.6.1",
-        "eslint-config-airbnb-base": "^12.0.0",
+        "eslint": "^4.9.0",
+        "eslint-config-airbnb-base": "^12.0.2",
         "eslint-plugin-import": "^2.7.0",
         "eslint-plugin-jasmine": "^2.8.4",
         "jasmine": "^2.8.0",
@@ -40,6 +45,7 @@
         "karma-sourcemap-loader": "^0.3.7",
         "karma-webpack": "^2.0.4",
         "phantomjs-prebuilt": "^2.1.15",
+        "prettier-eslint": "^8.2.1",
         "requirejs": "^2.3.5",
         "webpack": "^3.6.0"
     },
