--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.0.1",
         "babel-loader": "^7.1.2",
+        "babel-plugin-transform-regenerator": "^6.26.0",
+        "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.0",
         "eslint": "^4.9.0",
         "eslint-config-airbnb-base": "^12.0.2",
@@ -50,7 +52,6 @@
         "webpack": "^3.6.0"
     },
     "dependencies": {
-        "babel-polyfill": "^6.26.0",
         "lodash": "^4.17.4"
     }
 }
