Fixed eslint issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,10 +20,6 @@
         "indent": ["error", 4],
         "linebreak-style": ["error", "unix"],
         "quotes": ["error", "single"],
-        "semi": ["error", "always"],
-        "arrow-body-style": [
-            "error",
-            "never"
-        ]
+        "semi": ["error", "always"]
     }
 }
