--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "description": "A JavaScript project for learning sorting and sorting algorithms.",
     "main": "app.js",
     "scripts": {
-        "start": "npm run build && node dist/bundle.js",
-        "watch": "webpack --watch --debug",
-        "build": "webpack --debug",
+        "start": "npm run build && npm run serve",
+        "serve": "webpack-dev-server --open",
+        "watch": "webpack --watch",
+        "build:dev": "webpack --env='dev' --config webpack.dev.js",
+        "build:prod": "webpack --env='prod' --config webpack.prod.js",
+        "dev": "webpack-dashboard -- webpack && node dist/bundle.js",
         "test": "karma start karma.conf.js --single-run",
         "clean": "rm -r dist/*"
     },
@@ -41,7 +44,9 @@
         "karma": "^1.7.1",
         "karma-babel-preprocessor": "^7.0.0",
         "karma-chrome-launcher": "^2.2.0",
+        "karma-coverage": "^1.1.1",
         "karma-firefox-launcher": "^1.0.1",
+        "karma-html-reporter": "^0.2.7",
         "karma-jasmine": "^1.1.0",
         "karma-phantomjs-launcher": "^1.0.4",
         "karma-sourcemap-loader": "^0.3.7",
@@ -49,7 +54,11 @@
         "phantomjs-prebuilt": "^2.1.15",
         "prettier-eslint": "^8.2.1",
         "requirejs": "^2.3.5",
-        "webpack": "^3.6.0"
+        "webpack": "^3.6.0",
+        "webpack-bundle-analyzer": "^2.9.1",
+        "webpack-dashboard": "^1.0.2",
+        "webpack-dev-server": "^2.7.1",
+        "webpack-merge": "^4.1.1"
     },
     "dependencies": {
         "lodash": "^4.17.4"
