--- a/package.json
+++ b/package.json
@@ -59,9 +59,15 @@
         "webpack-bundle-analyzer": "^2.9.1",
         "webpack-dashboard": "^1.0.2",
         "webpack-dev-server": "^2.7.1",
-        "webpack-merge": "^4.1.1"
+        "webpack-merge": "^4.1.1",
+        "webpack-node-externals": "^1.6.0"
     },
     "dependencies": {
         "lodash": "^4.17.4"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
