--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "babel-plugin-transform-regenerator": "^6.26.0",
         "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.0",
+        "cz-conventional-changelog": "^2.1.0",
         "eslint": "^4.9.0",
         "eslint-config-airbnb-base": "^12.0.2",
         "eslint-plugin-import": "^2.7.0",
