--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "watch": "webpack --watch",
         "build:dev": "webpack --config webpack.dev.js --env.NODE_ENV=local",
         "build:test": "webpack --config webpack.dev.js --env.NODE_ENV=test",
-        "build:prod": "webpack --config webpack.prod.js --env.production",
+        "build:prod": "webpack -p --config webpack.prod.js --env.production",
+        "prod": "npm run build:prod && npm run serve",
         "dev": "webpack-dashboard -- webpack && node dist/bundle.js",
         "clean": "rm -r dist/*"
     },
@@ -34,6 +35,7 @@
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.0.1",
         "babel-loader": "^7.1.2",
+        "babel-plugin-lodash": "^3.3.2",
         "babel-plugin-transform-regenerator": "^6.26.0",
         "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.0",
@@ -42,6 +44,7 @@
         "eslint-config-airbnb-base": "^12.0.2",
         "eslint-plugin-import": "^2.7.0",
         "eslint-plugin-jasmine": "^2.8.4",
+        "html-webpack-plugin": "^2.30.1",
         "jasmine": "^2.8.0",
         "karma": "^1.7.1",
         "karma-babel-preprocessor": "^7.0.0",
